--- a/index.html
+++ b/index.html
@@ -7,6 +7,140 @@
     <title>Hekto</title>
   </head>
   <body>
+    <header>
+      <div class="container">
+        <div class="herader__top">
+          <div class="header__top-contact">
+            <a class="top__contact-gmail" href="mailto:mhhasanul@gmail.com"
+              >mhhasanul@gmail.com</a
+            >
+            <a class="top__contact-phone" href="tel:(12345)67890"
+              >(12345)67890</a
+            >
+          </div>
+          <div class="header__top-settings">
+            <button class="top__settings-language top-btn-all">English</button>
+            <button class="top__settings-usd top-btn-all">USD</button>
+            <button class="top__settings-login top-btn-all">Login</button>
+            <button class="top__settings-wishlist top-btn-all">Wishlist</button>
+            <button class="top__settings-backet top-btn-all"></button>
+          </div>
+        </div>
+      </div>
+    </header>
+    <nav>
+      <div class="container">
+        <div class="nav__block">
+          <a class="nav__block-logo" href="index.html">Hekto</a>
+          <ul class="nav__block-list">
+            <li class="nav__block-item">Home</li>
+            <li class="nav__block-item">Pages</li>
+            <li class="nav__block-item">Products</li>
+            <li class="nav__block-item">Blog</li>
+            <li class="nav__block-item">Shop</li>
+            <li class="nav__block-item">Contact</li>
+          </ul>
+          <form class="nav__block-search">
+            <input class="nav__block-input" type="search" />
+            <span class="nav__block-intimg"
+              ><svg
+                width="21"
+                height="21"
+                viewBox="0 0 21 21"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M20.7099 19.2899L16.9999 15.6099C18.44 13.8143 19.1374 11.5352 18.9487 9.2412C18.76 6.94721 17.6996 4.81269 15.9854 3.27655C14.2713 1.74041 12.0337 0.919414 9.73283 0.982375C7.43194 1.04534 5.24263 1.98747 3.61505 3.61505C1.98747 5.24263 1.04534 7.43194 0.982375 9.73283C0.919414 12.0337 1.74041 14.2713 3.27655 15.9854C4.81269 17.6996 6.94721 18.76 9.2412 18.9487C11.5352 19.1374 13.8143 18.44 15.6099 16.9999L19.2899 20.6799C19.3829 20.7736 19.4935 20.848 19.6153 20.8988C19.7372 20.9496 19.8679 20.9757 19.9999 20.9757C20.1319 20.9757 20.2626 20.9496 20.3845 20.8988C20.5063 20.848 20.6169 20.7736 20.7099 20.6799C20.8901 20.4934 20.9909 20.2442 20.9909 19.9849C20.9909 19.7256 20.8901 19.4764 20.7099 19.2899ZM9.9999 16.9999C8.61544 16.9999 7.26206 16.5894 6.11091 15.8202C4.95977 15.051 4.06256 13.9578 3.53275 12.6787C3.00293 11.3996 2.86431 9.99214 3.13441 8.63427C3.4045 7.27641 4.07119 6.02912 5.05016 5.05016C6.02912 4.07119 7.27641 3.4045 8.63427 3.13441C9.99214 2.86431 11.3996 3.00293 12.6787 3.53275C13.9578 4.06256 15.051 4.95977 15.8202 6.11091C16.5894 7.26206 16.9999 8.61544 16.9999 9.9999C16.9999 11.8564 16.2624 13.6369 14.9497 14.9497C13.6369 16.2624 11.8564 16.9999 9.9999 16.9999Z"
+                  fill="url(#paint0_linear_5905_225)"
+                />
+                <defs>
+                  <linearGradient
+                    id="paint0_linear_5905_225"
+                    x1="0.979004"
+                    y1="0.979004"
+                    x2="24.4288"
+                    y2="15.376"
+                    gradientUnits="userSpaceOnUse"
+                  >
+                    <stop stop-color="#F3F9FF" />
+                    <stop offset="1" stop-color="#F1F0FF" />
+                  </linearGradient>
+                </defs>
+              </svg>
+            </span>
+          </form>
+        </div>
+      </div>
+    </nav>
+    <div class="hero">
+      <div class="container">
+        <div class="hero__block">
+          <div class="hero__content">
+            <span class="hero__sub-title"
+              >Best Furniture For Your Castle....</span
+            >
+            <h1 class="hero__title">New Furniture Collection Trends in 2020</h1>
+            <p class="hero__description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Magna in
+              est adipiscing in phasellus non in justo.
+            </p>
+            <button class="hero__btn">Shop Now</button>
+          </div>
+          <div class="hero__img">
+            <img src="./imgs/hero-bg.png" alt="Hero imgs" loading="lazy" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <section class="product">
+      <div class="container">
+        <h2 class="product__title">Featured Products</h2>
+        <div class="product__block">
+          <a href="#">
+            <div class="product__card">
+              <img src="./imgs/card-img.png" alt="Products img" />
+              <div class="card__content">
+                <span class="card__title">Cantilever chair</span>
+                <div class="card__rainbow">
+                  <span class="card__colors gren"></span>
+                  <span class="card__colors red"></span>
+                  <span class="card__colors blue"></span>
+                </div>
+                <span class="card__code">Code - Y523201</span>
+                <span class="card__cost">$42.00</span>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </section>
+    <section class="leates">
+      <div class="container">
+        <div class="leates__block">
+          <h2 class="leates__title">Leatest Products</h2>
+          <ul class="leates__category">
+            <li class="category__item">New Arrival</li>
+            <li class="category__item">Best Seller</li>
+            <li class="category__item">Featured</li>
+            <li class="category__item">Special Offer</li>
+          </ul>
+          <div class="leates__tabs">
+            <a href="#">
+              <div class="leates__card">
+                <img src="./imgs/leates.png" alt="Leates category img" />
+                <div class="leates__card-content">
+                  <span class="leates__card-title">Comfort Handy Craft</span>
+                  <span class="leates__card-cost"
+                    >$42.00 <span class="sale">$65.00</span></span
+                  >
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
