added dark mode, dynamik tab and products

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Hekto</title>
   </head>
-  <body>
+  <body class="">
     <header>
       <div class="container">
         <div class="herader__top">
@@ -24,6 +24,20 @@
             <button class="top__settings-login top-btn-all">Login</button>
             <button class="top__settings-wishlist top-btn-all">Wishlist</button>
             <button class="top__settings-backet top-btn-all"></button>
+            <button class="switchMode">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-moon-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M6 .278a.77.77 0 0 1 .08.858 7.2 7.2 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277q.792-.001 1.533-.16a.79.79 0 0 1 .81.316.73.73 0 0 1-.031.893A8.35 8.35 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.75.75 0 0 1 6 .278"
+                />
+              </svg>
+            </button>
           </div>
         </div>
       </div>
@@ -119,24 +133,19 @@
       <div class="container">
         <div class="leates__block">
           <h2 class="leates__title">Leatest Products</h2>
-          <ul class="leates__category">
-            <li class="category__item">New Arrival</li>
-            <li class="category__item">Best Seller</li>
-            <li class="category__item">Featured</li>
-            <li class="category__item">Special Offer</li>
-          </ul>
+          <ul class="leates__category"></ul>
           <div class="leates__tabs">
-            <a href="#">
-              <div class="leates__card">
-                <img src="./imgs/leates.png" alt="Leates category img" />
+            <!-- <a href="#"> -->
+            <!-- <div class="leates__card"> -->
+            <!-- <img src="./imgs/leates.png" alt="Leates category img" />
                 <div class="leates__card-content">
                   <span class="leates__card-title">Comfort Handy Craft</span>
                   <span class="leates__card-cost"
                     >$42.00 <span class="sale">$65.00</span></span
                   >
-                </div>
-              </div>
-            </a>
+                </div> -->
+            <!-- </div> -->
+            <!-- </a> -->
           </div>
         </div>
       </div>
